--- a/homework/HW3_dfn.ipynb
+++ b/homework/HW3_dfn.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import scipy.stats as stats"
+    "import scipy.stats as stats\n",
+    "import numpy as np\n",
+    "from scipy.stats import norm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
        "[1172 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,11 +152,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['excess_return']=df['SPX']-df['TB1M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1172 entries, 0 to 1171\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                  Non-Null Count  Dtype         \n",
+      "---  ------                  --------------  -----         \n",
+      " 0   date                    1172 non-null   datetime64[ns]\n",
+      " 1   SPX                     1172 non-null   float64       \n",
+      " 2   TB1M                    1160 non-null   float64       \n",
+      " 3   excess_return           1160 non-null   float64       \n",
+      " 4   Historic_Var            1112 non-null   float64       \n",
+      " 5   Expanding_Vol           58 non-null     float64       \n",
+      " 6   0.05_Var_ExpandingVol   58 non-null     float64       \n",
+      " 7   Rolling_Vol             832 non-null    float64       \n",
+      " 8   0.05_Var_RollingVol     831 non-null    float64       \n",
+      " 9   Historic_CVar           1112 non-null   float64       \n",
+      " 10  0.05_CVar_ExpandingVol  58 non-null     float64       \n",
+      " 11  0.05_CVar_RollingVol    831 non-null    float64       \n",
+      "dtypes: datetime64[ns](1), float64(11)\n",
+      "memory usage: 110.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -173,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +226,7 @@
        "<Axes: title={'center': 'Historic Var'}, xlabel='date'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -235,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +367,7 @@
        "<Axes: title={'center': 'Historic CVar'}, xlabel='date'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +627,7 @@
        "80             -7.861772  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,9 +645,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tdf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Daniel/Documents/GitHub/UChicago/Portfolio_Risk_Management/finm-portfolio-2023/homework/HW3_dfn.ipynb Cell 20\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Daniel/Documents/GitHub/UChicago/Portfolio_Risk_Management/finm-portfolio-2023/homework/HW3_dfn.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tdf[\u001b[39m'\u001b[39m\u001b[39mRes\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m=\u001b[39mtdf[\u001b[39m'\u001b[39m\u001b[39mCol\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mrolling(\u001b[39m2\u001b[39m)\u001b[39m.\u001b[39msum()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Daniel/Documents/GitHub/UChicago/Portfolio_Risk_Management/finm-portfolio-2023/homework/HW3_dfn.ipynb#X25sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m tdf\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tdf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "tdf['Res']=tdf['Col'].rolling(2).sum()\n",
     "tdf"
@@ -628,6 +677,148 @@
    "metadata": {},
    "source": [
     "### Part 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Summary Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_statistics(df):\n",
+    "    res={}\n",
+    "    res_i={}\n",
+    "    for i in df.columns:\n",
+    "        if df[i].dtype=='<M8[ns]':\n",
+    "            pass\n",
+    "        else:\n",
+    "            res_i.update({'mean_an':round(np.mean(df[i])*12*100,2)})\n",
+    "            res_i.update({'volatility_an':round(np.std(df[i])*(12**(1/2))*100,2)})\n",
+    "            # res_i.update({'sharpe_an':res_i['mean_an']/res_i['volatility_an']})\n",
+    "            # res_i.update({'skewness':skew(df[i])})\n",
+    "            # res_i.update({'kurtosis':kurtosis(df[i])})\n",
+    "            # res_i.update({'VaR':df[i].quantile(0.05)})\n",
+    "            # res_i.update({'CVaR':df[i][df[i]<df[i].quantile(0.05)].mean()})\n",
+    "            # res_i.update({'Max_Drawdown':maxDrawD(df[i])})\n",
+    "            res.update({i:res_i})\n",
+    "            res_i={}\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logdf=pd.DataFrame()\n",
+    "logdf['date']=df['date']\n",
+    "logdf['excess_return']=np.log(df['excess_return']+1)\n",
+    "logdf['SPX']=np.log(df['SPX']+1)\n",
+    "logdf['TB1M']=np.log(df['TB1M']+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REGULAR\n",
+      "\n",
+      "1965 2000\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an        12.94  6.15           6.87\n",
+      "volatility_an  14.92  0.72          15.00\n",
+      "--------------------\n",
+      "2000 2023\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an         7.41  1.46           5.95\n",
+      "volatility_an  15.42  0.50          15.48\n",
+      "--------------------\n",
+      "1965 2023\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an        10.75  4.29           6.50\n",
+      "volatility_an  15.14  0.92          15.19\n",
+      "--------------------\n",
+      "====================\n",
+      "LOGS\n",
+      "\n",
+      "1965 2000\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an        11.76  6.13           5.72\n",
+      "volatility_an  14.94  0.71          15.10\n",
+      "--------------------\n",
+      "2000 2023\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an         6.19  1.46           4.73\n",
+      "volatility_an  15.54  0.50          15.61\n",
+      "--------------------\n",
+      "1965 2023\n",
+      "                 SPX  TB1M  excess_return\n",
+      "mean_an         9.55  4.28           5.32\n",
+      "volatility_an  15.20  0.92          15.31\n",
+      "--------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(df[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(df[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(df[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:14: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(logdf[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:14: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(logdf[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+      "/var/folders/80/2zgw65dd0msb1psqhn1c195w0000gn/T/ipykernel_17245/2645922212.py:14: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(pd.DataFrame(calculate_statistics(logdf[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n"
+     ]
+    }
+   ],
+   "source": [
+    "periods=[(1965,2000),(2000,2023),(1965,2023)]\n",
+    "tdf=pd.DataFrame()\n",
+    "print('Regular'.upper())\n",
+    "print()\n",
+    "for i, ii in periods:\n",
+    "    print(i, ii)\n",
+    "    print(pd.DataFrame(calculate_statistics(df[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+    "    print('-'*20)\n",
+    "print('='*20)\n",
+    "print('Logs'.upper())\n",
+    "print()\n",
+    "for i, ii in periods:\n",
+    "    print(i, ii)\n",
+    "    print(pd.DataFrame(calculate_statistics(logdf[df['date']>str(i)][df['date']<str(ii)][['SPX','TB1M','excess_return']])))\n",
+    "    print('-'*20)\n",
+    "\n",
+    "# pd.DataFrame(calculate_statistics(logdf[df['date'].loc[i:ii]]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob(mu, sigma, h):\n",
+    "    return norm.cdf(np.sqrt(h)*mu/sigma)"
    ]
   },
   {
